feat(api): initialize Go backend with package.json and Turbo configurations
- Added package.json for the API with build, dev, migration, and seed scripts.
- Updated root package.json to include migration and seed commands for the API.
- Updated pnpm-lock.yaml to include new dependencies and versions.
- Enhanced Turbo configuration to support API build, development, migration, and seeding tasks.

--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,16 @@
     "dev": {
       "cache": false,
       "persistent": true
-    }
+    },
+    "api:build": {
+      "outputs": ["dist/**"]
+    },
+    "api:dev": {
+      "cache": false,
+      "persistent": true
+    },
+    "api:migrate": {},
+    "api:migrate-down": {},
+    "api:seed": {}
   }
 }
