--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "lint": "turbo run lint",
     "format": "biome format --write .",
     "check": "biome check .",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "migrate": "turbo run api:migrate --filter=@flagits/api",
+    "migrate-down": "turbo run api:migrate-down --filter=@flagits/api",
+    "seed": "turbo run api:seed --filter=@flagits/api",
+    "api": "turbo run api:dev --filter=@flagits/api",
+    "start": "concurrently \"pnpm api\" \"pnpm dev --filter=admin\"",
+    "quick-setup": "cp .env.example .env && pnpm setup"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.8",  
+    "@biomejs/biome": "2.3.8",
+    "concurrently": "^8.2.0",
     "turbo": "^2.6.3",
     "typescript": "5.9.2"
   },
